--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -86,7 +86,7 @@
                 </div>
             </section>
     
-          <article>
+          <article class="container text-center">
             <h3>¡Nos encanta escuchar de nuestros lectores!</h3>
             <p>Si tienes alguna pregunta, comentario, sugerencia o simplemente quieres decir hola, no dudes en ponerte en contacto con nosotros. Nuestro equipo está siempre dispuesto a ayudar y a aprender de nuestros lectores.</p>
           </article>  
