--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -108,7 +108,7 @@
 
                         <div class="col-sm-3">
                             <h4>Artículo 7</h4>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto, dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing ellit. Voluptates illum hic officia repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto, dicta temporibus enim adipisci iusto inventore sit fugit?</p>
                             <a href="#" class="btn btn-primary">Leer más</a>
                         </div>    
                     </div>
