--- a/pages/Reseñas.html
+++ b/pages/Reseñas.html
@@ -51,7 +51,7 @@
             <div class="grid-item"><img src="../assets/img/iPhone-15.jpeg" alt="Imageniphone15"></div>
             <div class="grid-item">
                 <h2>Lorem ipmsum</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, natus placeat! Recusandae magni culpa nobis obcaecati, repudiandae, ea sequi ipsam error fugiat animi dolorum aliquid ducimus, accusantium cumque aperiam reiciendis.</p>
+                <p>Lorem ispsum dolor sit amet consectetur adipisicing elit. Esse, natus placeat! Recusandae magni culpa nobis obcaecati, repudiandae, ea sequi ipsam error fugiat animi dolorum aliquid ducimus, accusantium cumque aperiam reiciendis.</p>
             </div>
           </div>
         
