--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -69,7 +69,7 @@
     
                         <div class="col-sm-12 col-md-6 text-center">
                             <h3>Pixel 8 & Pixel 8 Pro</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint non neque adipisci deserunt excepturi. Quia quibusdam enim impedit adipisci sit. Cum sit quisquam assumenda, esse culpa voluptates doloremque quo libero!</p>
+                            <p>Lorem ipssum dolor sit amet consectetur adipisicing elit. Sint non neque adipisci deserunt excepturi. Quia quibusdam enim impedit adipisci sit. Cum sit quisquam assumenda, esse culpa voluptates doloremque quo libero!</p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/TLIkYco7lhc?si=G3-BTGemOhwien29" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>               
                         </div>
                     </div>
