--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <section>
             <article>
                 <h4>Artículo 3</h4>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto, dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                <p>Lorem ispsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto, dicta temporibus enim adipisci iusto inventore sit fugit?</p>
                 <a href="#" class="btn btn-primary">Leer más</a>
                 <div class="container">
                     <div class="row justify-content-center">
