corrección de index

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Home<span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="./pages/noticias.html">Noticias</a>
+                        <a class="nav-link" href="./pages/Noticias.html">Noticias</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/reseñas.html">Reseñas</a>
+                            <a class="nav-link" href="./pages/Reseñas.html">Reseñas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/videos.html">Vídeos</a>
+                            <a class="nav-link" href="./pages/Videos.html">Vídeos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./pages/Contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
