--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="./noticias.html">Noticias</a>
+                    <a class="nav-link" href="./Noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./reseñas.html">Reseñas</a>
+                        <a class="nav-link" href="./Reseñas.html">Reseñas</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active" aria-current="page" href="./videos.html">Vídeos<span class="sr-only"></span></a>
+                        <a class="nav-link active" aria-current="page" href="./Videos.html">Vídeos<span class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                        <a class="nav-link" href="./Contacto.html">Contacto</a>
                     </li>
                 </ul>
             </div>
