--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -27,16 +27,16 @@
                     <a class="nav-link" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./noticias.html">Noticias</a>
+                        <a class="nav-link" href="./Noticias.html">Noticias</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./reseñas.html">Reseñas</a>
+                        <a class="nav-link" href="./Reseñas.html">Reseñas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./videos.html">Vídeos</a>
+                        <a class="nav-link" href="./Videos.html">Vídeos</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active" aria-current="page" href="./contacto.html">Contacto<span class="sr-only"></span></a>
+                        <a class="nav-link active" aria-current="page" href="./Contacto.html">Contacto<span class="sr-only"></span></a>
                     </li>
                 </ul>
             </div>
