modificaciones al sass

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main class="container mt-5">
         <h1 class="text-center">Bienvenido a TechnoGlobe</h1>
         <section>
-                <article>
+                <article class="animate">
                     <h2>Artículo 1</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cumque rem officia beatae accusamus quod ducimus, voluptate aperiam labore repudiandae amet cupiditate deleniti perspiciatis consequuntur assumenda officiis, suscipit ad voluptatem.</p>
                     <a href="#" class="btn btn-primary">Leer más</a>
