--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -45,7 +45,7 @@
 
     
     <main>
-        <h1 class="text-center">Noticias</h1>
+        <h1 class="text-center text-page">Noticias</h1>
         <section>
             <article>
                 <div class="container text-center">
