--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -46,13 +46,13 @@
 
     
     <main>
-        <h1 class="text-center">Vídeos</h1>
+        <h1 class="text-center text-page">Vídeos</h1>
         <section>
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col-sm-12 col-md-12">
                         <h2>Artículo 1</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi cumque rem officia beatae accusamus quod ducimus, voluptate aperiam labore repudiandae amet cupiditate deleniti perspiciatis consequuntur assumenda officiis, suscipit ad voluptatem.</p>
+                        <p>Echa un vistazo a nuestros vídeos, donde exploramos en profundidad los temas más candentes de la tecnología y proporcionamos tutoriales útiles.</p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/Piz0VWtTFnc?si=3tZUic6ezfDXoqPh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
                     </div>
                 </div>      
