--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -63,7 +63,7 @@
                             <label for="Apellido">Apellido*</label>
                             <input type="text" id="Apellido" name="Apellido" placeholder="Ingrese su apellido" required>
     
-                            <label for="Email" class="form">Email*</label>
+                            <label for="Email">Email*</label>
                             <input type="mail" id="Email" name="Email" placeholder="ejemplo@servidor.com" required>
     
                             <label for="Mensaje">Mensaje</label>
