correciones en PreEntrega 3

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -46,7 +46,7 @@
 
    
     <main>      
-        <h1 class="text-center">Contacto</h1>
+        <h1 class="text-center text-page">Contacto</h1>
         <section>
             <h2>Envíanos un mensaje</h2>
             <article class="container">
