--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TechnoGlobe</title>
+    <meta name="description" content="Explora el fascinante mundo de la tecnología en nuestro sitio. Descubre las últimas noticias, reseñas detalladas, emocionantes vídeos y tutoriales prácticos. Mantente al tanto de las innovaciones y tendencias tecnológicas. ¡Conviértete en un experto con nuestro contenido exclusivo!">
+    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <title>Home | TechnoGlobe</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -16,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="logo" id="top" src="./assets/img/logo-completo.png" alt="Logo de TechnoGlobe" width="300px">
+                    <img class="logo" id="top" src="./assets/img/logo-completo.png" alt="Logo de TechnoGlobe">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,7 +49,7 @@
     </header>
 
     <main class="container">
-        <h1 class="text-center text-page">¡Bienvenido a TechnoGlobe!</h1>
+        <h1 class="text-center text-page animate__animated animate__bounce">¡Bienvenido a TechnoGlobe!</h1>
         <div class="row">
             <section class="col-sm-6 col-md-6">
                 <article class="animate">
@@ -57,7 +60,7 @@
                 </article>
             </section>
 
-            <section class="col-sm-12 col-md-6 mt-5 mt-md-0">
+            <section class="col-sm-12 col-md-6 mt-5 mt-md-0 animate__animated animate__fadeInRight">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -103,7 +106,7 @@
             </article>
         </section>
 
-        <section>
+        <sectio class="animate__animated animate__backInUp">
             <article class="container">
                 <h4>Inteligencia artificial</h4>
                 <p>Adéntrate en el apasionante mundo de la inteligencia artificial (IA) y descubre cómo esta tecnología está cambiando la forma en que interactuamos con la información y el mundo que nos rodea. Exploraremos los avances más recientes, casos de uso emocionantes y debates éticos en torno a la I</p>
