--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TechnoGlobe</title>
+    <meta name="description" content="¡Conéctate con TechnoGlobe! Contáctanos para colaboraciones, consultas o simplemente para compartir tus ideas tecnológicas. Somos tu fuente confiable de noticias, reseñas, vídeos y tutoriales en el fascinante mundo de la tecnología. Únete a nuestra comunidad y descubre el futuro hoy.">
+    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <title>Contacto | TechnoGlobe</title>
     <link rel="shorcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     
@@ -46,7 +49,7 @@
 
    
     <main>      
-        <h1 class="text-center text-page">Contacto</h1>
+        <h1 class="text-center text-page animate__animated animate__bounce">Contacto</h1>
         <section>
             <h2>Envíanos un mensaje</h2>
             <article class="container">
