--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TechnoGlobe</title>
+    <meta name="description" content="¡Descubre las últimas novedades tecnológicas en TechnoGlobe! Explora noticias de vanguardia Mantente al tanto de la evolución tecnológica con nuestra cobertura completa. ¡Sumérgete en el futuro hoy mismo!">
+    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <title>Noticias | TechnoGlobe</title>
     <link rel="shorcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
 
@@ -45,20 +48,21 @@
 
     
     <main>
-        <h1 class="text-center text-page">Noticias</h1>
+        <h1 class="text-center text-page animate__animated animate__bounce">Noticias</h1>
         <section>
             <article>
                 <div class="container text-center">
-                    <div class="row align-items-center">
-                      <div class="col-sm-6"> </div>
-
-                        <h2>Erik van Rooyen gana el World Wide Technology Championship</h2>
-                        <p>Erik van Rooyen ganó el World Wide Technology Championship, un evento pionero del PGA TOUR en México.</p>
-                        <a href="#" class="btn btn-primary">Leer más</a>
+                    <div class="row justify-content-center">
+                        <div class="col-sm-6">
+                            <h2>Erik van Rooyen gana el World Wide Technology Championship</h2>
+                            <p>Erik van Rooyen ganó el World Wide Technology Championship, un evento pionero del PGA TOUR en México.</p>
+                            <a href="#" class="btn btn-primary">Leer más</a>
+                        </div>
                     </div>
                 </div>
             </article>
         </section>
+               
 
         <section> 
             <article>
