--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -4,11 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>TechnoGlobe</title>
+    <meta name="description" content="¡Descubre las últimas novedades tecnológicas en TechnoGlobe! Explora emocionantes vídeos y tutoriales expertos. Mantente al tanto de la evolución tecnológica con nuestra cobertura completa. ¡Sumérgete en el futuro hoy mismo!">
+    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <title>Vídeos | TechnoGlobe</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -16,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe" width="300px">
+                <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +50,7 @@
 
    
     <main>
-        <h1 class="text-center text-page">Vídeos</h1>
+        <h1 class="text-center text-page animate__animated animate__bounce">Vídeos</h1>
 
         <section>
             <div class="container text-center">
