--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="¡Descubre las últimas novedades tecnológicas en TechnoGlobe! Explora emocionantes vídeos y tutoriales expertos. Mantente al tanto de la evolución tecnológica con nuestra cobertura completa. ¡Sumérgete en el futuro hoy mismo!">
-    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
-    <meta name="keywords" content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <meta name="description"
+        content="¡Descubre las últimas novedades tecnológicas en TechnoGlobe! Explora emocionantes vídeos y tutoriales expertos. Mantente al tanto de la evolución tecnológica con nuestra cobertura completa. ¡Sumérgete en el futuro hoy mismo!">
+    <meta name="keywords"
+        content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
+    <meta name="keywords"
+        content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
     <title>Vídeos | TechnoGlobe</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -22,8 +25,10 @@
             <a class="navbar-brand" href="../index.html">
                 <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -38,7 +43,8 @@
                         <a class="nav-link" href="./Reseñas.html">Reseñas</a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link active" aria-current="page" href="./Videos.html">Vídeos<span class="sr-only"></span></a>
+                        <a class="nav-link active" aria-current="page" href="./Videos.html">Vídeos<span
+                                class="sr-only"></span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./Contacto.html">Contacto</a>
@@ -48,7 +54,7 @@
         </nav>
     </header>
 
-   
+
     <main>
         <h1 class="text-center text-page animate__animated animate__bounce">Vídeos</h1>
 
@@ -57,7 +63,8 @@
                 <div class="row align-items-center">
                     <div class="col-sm-12 col-md-12">
                         <h2>Explorando la Tecnología del Futuro</h2>
-                        <p>Descubre los vídeos donde se exploran en profundidad los temas más candentes de la tecnología y proporcionamos tutoriales útiles acompañados de expertos.</p>
+                        <p>Descubre los vídeos donde se exploran en profundidad los temas más candentes de la tecnología
+                            y proporcionamos tutoriales útiles acompañados de expertos.</p>
                     </div>
                 </div>
             </div>
@@ -68,8 +75,12 @@
                 <div class="row align-items-center">
                     <div class="col-sm-12 col-md-12 text-center">
                         <h3>Samsung Galaxy FE 2023</h3>
-                        <p>Descubre las características más recientes del Samsung Galaxy FE 2023 en este emocionante vídeo. ¡No te lo pierdas!</p>
-                        <iframe class="video-container" width="560" height="315" src="https://www.youtube.com/embed/Piz0VWtTFnc?si=3tZUic6ezfDXoqPh" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Descubre las características más recientes del Samsung Galaxy FE 2023 en este emocionante
+                            vídeo. ¡No te lo pierdas!</p>
+                        <iframe class="video-container" width="560" height="315"
+                            src="https://www.youtube.com/embed/Piz0VWtTFnc?si=3tZUic6ezfDXoqPh" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -78,14 +89,22 @@
                 <div class="row align-items-center">
                     <div class="col-sm-12 col-md-6 text-center">
                         <h3>Exploración del iPhone 15</h3>
-                        <p>Descubre las características más recientes del iPhone 15 en este emocionante vídeo. ¡No te lo pierdas!</p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/Mw42XfZBlM8?si=yQWC4MgFpvp2hOIT" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Descubre las características más recientes del iPhone 15 en este emocionante vídeo. ¡No te lo
+                            pierdas!</p>
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/Mw42XfZBlM8?si=yQWC4MgFpvp2hOIT" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
 
                     <div class="col-sm-12 col-md-6 text-center">
                         <h3>Pixel 8 & Pixel 8 Pro</h3>
-                        <p>Explora las innovaciones y características de los nuevos Pixel 8 y Pixel 8 Pro. ¡Descúbrelo en este vídeo!</p>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/TLIkYco7lhc?si=G3-BTGemOhwien29" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <p>Explora las innovaciones y características de los nuevos Pixel 8 y Pixel 8 Pro. ¡Descúbrelo
+                            en este vídeo!</p>
+                        <iframe width="560" height="315"
+                            src="https://www.youtube.com/embed/TLIkYco7lhc?si=G3-BTGemOhwien29" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -93,18 +112,26 @@
     </main>
 
     <footer class="footer mt-auto text-white text-center py-3">
-        <div class="row">
-            <div class="col-12 col-md-4">
-                <h5>TechnoGlobe&reg; - 2023</h5>
-            </div>
-            <div class="col-12 col-md-4">
-                <h6>Columna 2</h6>
-                <p>Contenido de la columna 2.</p>
-            </div>
-            <div class="col-12 col-md-4 text-white">
-                <a href="#top">Ir al Top</a>
-                <h6>Columna 3</h6>
-                <p>Contenido de la columna 3.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 col-lg-3">
+                    <h5>TechnoGlobe® - 2023</h5>
+                </div>
+    
+                <div class="col-12 col-md-4 col-lg-3">
+                    <h6>Acceso rápido</h6>
+                    <a href="../index.html">Home</a>
+                    <a href="./Noticias.html">Noticias<a>
+                    <a href="./Reseñas.html">Reseñas</a>
+                    <a href="./Videos.html">Vídeos</a>
+                    <a href="./Contacto.html">Contacto</a>
+                </div>
+    
+                <div class="col-12 col-md-4 col-lg-3 text-white">
+                    <a href="#top">Ir al Top</a>
+                    <h6>Columna 3</h6>
+                    <p>Contenido de la columna 3.</p>
+                </div>
             </div>
         </div>
     </footer>
