correcciones en PreEntrega3

--- a/pages/Noticias.html
+++ b/pages/Noticias.html
@@ -103,35 +103,35 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-sm-3">
-                        <h4>Artículo 4</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia
-                            repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto,
-                            dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                        <h4>Airbus recurre a DXC Technology para impulsar la transformación empresarial: </h4>
+                        <p>Airbus ha recurrido a DXC Technology para mejorar el rendimiento de las entregas, la
+                            capacidad de innovación y la experiencia de los empleados con las tecnologías de ServiceNow.
+                        </p>
                         <a href="#" class="btn btn-primary">Leer más</a>
                         <img src="" alt="">
                     </div>
 
                     <div class="col-sm-3">
-                        <h4>Artículo 5</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia
-                            repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto,
-                            dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                        <h4>Samsung gana reconocimientos de la Consumer Technology Association por reinventar el futuro:
+                        </h4>
+                        <p>En la previa de CES 2024, la Consumer Technology Association ha decidido reconocer productos
+                            Samsung por reinventar el futuro.</p>
                         <a href="#" class="btn btn-primary">Leer más</a>
                     </div>
 
                     <div class="col-sm-3">
-                        <h4>Artículo 6</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates illum hic officia
-                            repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto,
-                            dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                        <h4>OQ Technology y o2 Telefónica unen fuerzas para la conectividad global 5G IoT:</h4>
+                        <p> En colaboración con OQ Technology, o2 Telefónica ofrece un servicio híbrido de conectividad
+                            móvil satelital, proporcionando cobertura de red IoT global</p>
                         <a href="#" class="btn btn-primary">Leer más</a>
                     </div>
 
                     <div class="col-sm-3">
-                        <h4>Artículo 7</h4>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing ellit. Voluptates illum hic officia
-                            repudiandae minus earum animi obcaecati, quidem mollitia, aliquam quibusdam architecto,
-                            dicta temporibus enim adipisci iusto inventore sit fugit?</p>
+                        <h4>El compromiso de Apple de admitir la mensajería RCS finalmente podría acabar con los SMS:
+                        </h4>
+                        <p>Apple ha prometido apoyar el estándar de mensajería RCS ampliamente utilizado, lo que
+                            facilitará que los teléfonos Android compartan mensajes con iPhones, al tiempo que empujará
+                            las antiguas formas de enviar mensajes de texto al lado del camino.</p>
                         <a href="#" class="btn btn-primary">Leer más</a>
                     </div>
                 </div>
@@ -144,27 +144,23 @@
         </section>
     </main>
 
-    <footer class="footer mt-auto text-white text-center py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4 col-lg-3">
-                    <h5>TechnoGlobe® - 2023</h5>
-                </div>
-    
-                <div class="col-12 col-md-4 col-lg-3">
-                    <h6>Acceso rápido</h6>
-                    <a href="../index.html">Home</a>
-                    <a href="./Noticias.html">Noticias<a>
-                    <a href="./Reseñas.html">Reseñas</a>
-                    <a href="./Videos.html">Vídeos</a>
-                    <a href="./Contacto.html">Contacto</a>
-                </div>
-    
-                <div class="col-12 col-md-4 col-lg-3 text-white">
-                    <a href="#top">Ir al Top</a>
-                    <h6>Columna 3</h6>
-                    <p>Contenido de la columna 3.</p>
-                </div>
+    <footer class="footer mt-auto py-3">
+        <div class="footer-content row container">
+            <div class="col-12 col-md-4 col-lg-3">
+                <h5>TechnoGlobe® - 2023</h5>
+            </div>
+
+            <div class="col-12 col-md-4 col-lg-3">
+                <h6>Acceso rápido</h6>
+                <a href="../index.html">Home</a>
+                <a href="./Noticias.html">Noticias<a>
+                        <a href="./Reseñas.html">Reseñas</a>
+                        <a href="./Videos.html">Vídeos</a>
+                        <a href="./Contacto.html">Contacto</a>
+            </div>
+
+            <div class="col-12 col-md-4 col-lg-3">
+                <a href="#top">Ir al Top</a>
             </div>
         </div>
     </footer>
