--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -111,27 +111,23 @@
         </section>
     </main>
 
-    <footer class="footer mt-auto text-white text-center py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-4 col-lg-3">
-                    <h5>TechnoGlobe® - 2023</h5>
-                </div>
-    
-                <div class="col-12 col-md-4 col-lg-3">
-                    <h6>Acceso rápido</h6>
-                    <a href="../index.html">Home</a>
-                    <a href="./Noticias.html">Noticias<a>
-                    <a href="./Reseñas.html">Reseñas</a>
-                    <a href="./Videos.html">Vídeos</a>
-                    <a href="./Contacto.html">Contacto</a>
-                </div>
-    
-                <div class="col-12 col-md-4 col-lg-3 text-white">
-                    <a href="#top">Ir al Top</a>
-                    <h6>Columna 3</h6>
-                    <p>Contenido de la columna 3.</p>
-                </div>
+    <footer class="footer mt-auto py-3">
+        <div class="footer-content row container">
+            <div class="col-12 col-md-4 col-lg-3">
+                <h5>TechnoGlobe® - 2023</h5>
+            </div>
+
+            <div class="col-12 col-md-4 col-lg-3">
+                <h6>Acceso rápido</h6>
+                <a href="../index.html">Home</a>
+                <a href="./Noticias.html">Noticias<a>
+                        <a href="./Reseñas.html">Reseñas</a>
+                        <a href="./Videos.html">Vídeos</a>
+                        <a href="./Contacto.html">Contacto</a>
+            </div>
+
+            <div class="col-12 col-md-4 col-lg-3">
+                <a href="#top">Ir al Top</a>
             </div>
         </div>
     </footer>
