Cambiar a un nuevo repositorio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
     <title>Home | TechnoGlobe</title>
-    <link rel="shortcut icon" href="./assets/img/favicon.ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/favicon.ico.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <div class="container-fluid">
                 <a class="navbar-brand" href="./index.html">
-                    <img class="logo" id="top" src="./assets/img/logo-completo.png" alt="Logo de TechnoGlobe">
+                    <img class="logo" id="top" src="./assets/img/logo-completo.webp" alt="Logo de TechnoGlobe">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -64,7 +64,7 @@
                         información, explorando desde dispositivos móviles y aplicaciones hasta los avances más
                         vanguardistas en inteligencia artificial y ciberseguridad.
                     </p>
-                    <a href="#" class="btn btn-primary">Leer más</a>
+                    <a href="./pages/Contacto.html" class="btn btn-primary">Contáctanos</a>
                 </article>
             </section>
 
@@ -80,18 +80,18 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./assets/img/threads-desktop.jpg" class="d-block w-100"
+                            <img src="./assets/img/threads-desktop.webp" class="d-block w-100"
                                 alt="Aplicación Threads para escritorio">
                             <div class="carousel-caption">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/apple.jpg" class="d-block w-100" alt="Apple">
+                            <img src="./assets/img/apple.webp" class="d-block w-100" alt="Apple">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./assets/img/elon-owns-twitter.jpg" class="d-block w-100"
+                            <img src="./assets/img/elon-owns-twitter.webp" class="d-block w-100"
                                 alt="Elon Musk dueño de Twitter">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
@@ -114,64 +114,84 @@
         <section>
             <article class="container text-center">
                 <div class="col-sm-12">
+                    <h2>Últimas tendencias</h2>
                     <h3>Aplicaciones</h3>
-                    <p>Descubre las aplicaciones más útiles, creativas y revolucionarias que están transformando la
-                        manera en que vivimos y trabajamos. Analizaremos las últimas tendencias en desarrollo de
-                        aplicaciones y te proporcionaremos guías prácticas para aprovechar al máximo tus aplicaciones
-                        favoritas.</p>
-                    <a href="#" class="btn btn-primary">Leer más</a>
+
+                    <div>
+                        <p>Descubre las aplicaciones más útiles, creativas y revolucionarias que están transformando
+                            la
+                            manera en que vivimos y trabajamos. Analizaremos las últimas tendencias en desarrollo de
+                            aplicaciones y te proporcionaremos guías prácticas para aprovechar al máximo tus
+                            aplicaciones
+                            favoritas.
+
+                            <br><br> Las aplicaciones móviles han revolucionado la forma en que vivimos y trabajamos,
+                            y
+                            cada año surgen nuevas tendencias que llevan esta revolución aún más lejos. Aquí te
+                            presentamos algunas de las tendencias más recientes en el desarrollo de aplicaciones:
+                        </p>
+                        <a href="./pages/Error-404.html" class="btn btn-secondary">Leer más</a>
+                    </div>
                 </div>
             </article>
         </section>
 
-        <sectio class="animate__animated animate__backInUp">
+        <section class="animate__animated animate__backInUp">
             <article class="container">
-                <h4>Inteligencia artificial</h4>
+                <h3>Inteligencia artificial</h3>
                 <p>Adéntrate en el apasionante mundo de la inteligencia artificial (IA) y descubre cómo esta tecnología
                     está cambiando la forma en que interactuamos con la información y el mundo que nos rodea.
                     Exploraremos los avances más recientes, casos de uso emocionantes y debates éticos en torno a la I
                 </p>
-                <a href="#" class="btn btn-primary">Leer más</a>
+                <a href="./pages/Error-404.html" class="btn btn-secondary">Leer más</a>
             </article>
-            <div class="container image-grid">
-                <div class="row justify-content-center">
-                    <div class="col-sm-12 col-md-4">
-                        <a href="#"></a>
-                        <img src="./assets/img/iPhone-15-titanio.jpg" class="img-fluid custom-img"
-                            alt="Iphone 15 en color titiano natural">
-                    </div>
+            <section>
+                <h2>Vídeos</h2>
+                <div class="container image-grid">
+                    <div class="row justify-content-center">
+                        <div class="col-sm-12 col-md-4">
+                            <h3>iPhone 15</h3>
+                            <a href="./pages/Videos.html">
+                                <img src="./assets/img/iPhone-15-titanio.webp" class="img-fluid custom-img"
+                                    alt="Iphone 15 en color titiano natural">
+                            </a>
+                        </div>
 
-                    <div class="col-sm-12 col-md-4">
-                        <a href="#"></a>
-                        <img src="./assets/img/samsung-galaxy-s23-ultra.jpg" class="img-fluid custom-img"
-                            alt="Samsung Galaxy S23 Ultra">
-                    </div>
+                        <div class="col-sm-12 col-md-4">
+                            <h3>Samsung Galaxy S23 Ultra</h3>
+                            <a href="./pages/Videos.html">
+                                <img src="./assets/img/samsung-galaxy-s23-ultra.webp" class="img-fluid custom-img"
+                                    alt="Samsung Galaxy S23 Ultra">
+                            </a>
+                        </div>
 
-                    <div class="col-sm-12 col-md-4">
-                        <a href="#"></a>
-                        <img src="./assets/img/google-pixel-8-pro.jpg" class="img-fluid custom-img"
-                            alt="Google Pixel 8 Pro">
+                        <div class="col-sm-12 col-md-4">
+                            <h3>Google Pixel 8 Pro</h3>
+                            <a class="content" href="./pages/Videos.html">
+                                <img src="./assets/img/google-pixel-8-pro.webp" class="img-fluid custom-img"
+                                    alt="Google Pixel 8 Pro">
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-            </article>
-            </section>
+            </section>    
+        </section>
 
     </main>
 
     <footer class="footer mt-auto py-3">
         <div class="footer-content row container">
             <div class="col-12 col-md-4 col-lg-3">
-                <h5>TechnoGlobe® - 2023</h5>
+                <h4>TechnoGlobe® - 2023</h4>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3">
-                <h6>Acceso rápido</h6>
+                <h4>Acceso rápido</h4>
                 <a href="./index.html">Home</a>
                 <a href="./pages/Noticias.html">Noticias<a>
-                <a href="./pages/Reseñas.html">Reseñas</a>
-                <a href="./pages/Videos.html">Vídeos</a>
-                <a href="./pages/Contacto.html">Contacto</a>
+                        <a href="./pages/Reseñas.html">Reseñas</a>
+                        <a href="./pages/Videos.html">Vídeos</a>
+                        <a href="./pages/Contacto.html">Contacto</a>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3">
@@ -179,7 +199,7 @@
             </div>
         </div>
     </footer>
-    
+
 
     <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
