--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -9,7 +9,7 @@
     <meta name="keywords"
         content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
     <title>Contacto | TechnoGlobe</title>
-    <link rel="shorcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
+    <link rel="shorcut icon" href="../assets/img/favicon.ico.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe"
+                <img class="logo" id="top" src="../assets/img/logo-completo.webp" alt="Logo de TechnoGlobe"
                     width="300px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,7 +68,7 @@
             </article>
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-12 col-md-8">
+                    <div class="col-12 col-md-6">
                         <form action="">
                             <label for="Nombre">Nombre*</label>
                             <input type="text" id="Nombre" name="Nombre" placeholder="Ingrese su nombre" required>
@@ -83,24 +83,24 @@
                             <textarea name="mensaje" id="Mensaje" cols="60" rows="5" placeholder="Escriba su mensaje"
                                 required></textarea>
 
-                            <div>
-                                <div class="container text-center">
-                                    <div class="row">
-                                        <div class="col-sm-12 col-md-6">
-                                            <input type="submit" value="Enviar formulario">
-                                        </div>
-                                        <div class="col-sm-12 col-md-6">
-                                            <input type="reset" value="Limpiar formulario">
-                                        </div>
+                                <div class="container">
+                                    <div class="row justify-content-center">
+                                      <div class="col-12 col-md-6">
+                                        <input type="submit" value="Enviar formulario" class="btn btn-primary w-100">
+                                      </div>
+                                      <div class="col-12 col-md-6">
+                                        <input type="reset" value="Limpiar formulario" class="btn btn-primary w-100">
+                                      </div>
                                     </div>
-                                </div>
-                            </div>
+                                  </div>
+                                  
+
                         </form>
                     </div>
 
-                    <div class="col-sm-12 col-md-4">
-                        <div class="contacto"><img src="../assets/img/Contacto.png" class="img-fluid"
-                                alt="Imagen de contacto" width="100%"></div>
+                    <div class="col-12 col-md-6">
+                        <div class="contacto"><img src="../assets/img/contacto.webp" alt="Imagen de contacto"
+                                width="100%"></div>
                     </div>
                 </div>
         </section>
@@ -114,11 +114,11 @@
     <footer class="footer mt-auto py-3">
         <div class="footer-content row container">
             <div class="col-12 col-md-4 col-lg-3">
-                <h5>TechnoGlobe® - 2023</h5>
+                <h4>TechnoGlobe® - 2023</h4>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3">
-                <h6>Acceso rápido</h6>
+                <h4>Acceso rápido</h4>
                 <a href="../index.html">Home</a>
                 <a href="./Noticias.html">Noticias<a>
                         <a href="./Reseñas.html">Reseñas</a>
