--- a/pages/Reseñas.html
+++ b/pages/Reseñas.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="¡Descubre las últimas novedades tecnológicas en TechnoGlobe! Explora las reseñas imparciales y mantente al tanto de la evolución tecnológica con nuestra cobertura completa. ¡Sumérgete en el futuro hoy mismo!" />
     <title>Reseñas | TechnoGlobe</title>
-    <link rel="shorcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon" />
+    <link rel="shorcut icon" href="../assets/img/favicon.ico.webp" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap" />
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/estilos.css" />
@@ -18,7 +18,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe"
+                <img class="logo" id="top" src="../assets/img/logo-completo.webp" alt="Logo de TechnoGlobe"
                     width="300px" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -68,7 +68,7 @@
 
         <div class="row justify-content-center col-sm-12 col-md-12">
             <div class="grid-item col-md-4 img p-3 animate__animated animate__bounceInLeft">
-                <img src="../assets/img/iPhone-15.jpeg" alt="Imageniphone15" />
+                <img src="../assets/img/iPhone-15.webp" alt="Imageniphone15" />
             </div>
             <div class="grid-item col-md-8 p-3">
                 <h2>iPhone 15 Pro Max</h2>
@@ -83,13 +83,13 @@
                     Pro Max es una excelente opción para aquellos que buscan un teléfono
                     de alta gama a un precio razonable.
                 </p>
-                <a href="#" class="btn btn-primary">Leer más</a>
+                <a href="./Error-404.html" class="btn btn-secondary">Leer más</a>
             </div>
         </div>
 
         <div class="row justify-content-center col-sm-12 col-md-12">
             <div class="grid-item col-md-4 img p-3 animate__animated animate__bounceInLeft">
-                <img src="../assets/img/samsung-galaxy-fe23.svg" alt="Imageniphone15" />
+                <img src="../assets/img/samsung-galaxy-fe23.webp" alt="Fotografía del Samsung Galaxy FE 2023" />
             </div>
             <div class="grid-item col-md-8 p-3">
                 <h2>Samsung Galaxy FE23</h2>
@@ -101,13 +101,14 @@
                     necesita mejoras, y el aspecto bastante arcaico del teléfono con
                     muesca de gota de agua no ayuda.
                 </p>
-                <a href="#" class="btn btn-primary">Leer más</a>
+                <a href="./Error-404.html" class="btn btn-secondary">Leer más</a>
             </div>
         </div>
 
         <div class="row justify-content-center col-sm-12 col-md-12">
             <div class="grid-item col-md-4 img p-3 animate__animated animate__bounceInLeft">
-                <img src="../assets/img/iPhone-15.jpeg" alt="Imageniphone15" />
+                <img src="../assets/img/samsung-galaxy-s23-ultra-reseñas.webp"
+                    alt="Fotografía del Samsung Galaxy S23 Ultra" />
             </div>
             <div class="grid-item col-md-8 p-3">
                 <h2>Samsung Galaxy S23 Ultra</h2>
@@ -121,7 +122,7 @@
                     Samsung Galaxy S23 Ultra es un dispositivo impresionante que ofrece
                     una gran cantidad de características de alta gama.
                 </p>
-                <a href="#" class="btn btn-primary">Leer más</a>
+                <a href="./Error-404.html" class="btn btn-secondary">Leer más</a>
             </div>
         </div>
     </main>
@@ -129,11 +130,11 @@
     <footer class="footer mt-auto py-3">
         <div class="footer-content row container">
             <div class="col-12 col-md-4 col-lg-3">
-                <h5>TechnoGlobe® - 2023</h5>
+                <h3>TechnoGlobe® - 2023</h3>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3">
-                <h6>Acceso rápido</h6>
+                <h4>Acceso rápido</h4>
                 <a href="../index.html">Home</a>
                 <a href="./Noticias.html">Noticias<a>
                         <a href="./Reseñas.html">Reseñas</a>
