--- a/pages/Videos.html
+++ b/pages/Videos.html
@@ -11,7 +11,7 @@
     <meta name="keywords"
         content="tecnología, noticias tecnológicas, reseñas de tecnología, vídeos tecnológicos, tutoriales tecnológicos, innovación, gadgets, ciencia, últimas tendencias tecnológicas, comunidad tecnológica, futuro tecnológico">
     <title>Vídeos | TechnoGlobe</title>
-    <link rel="shortcut icon" href="../assets/img/favicon.ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/img/favicon.ico.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Heebo&display=swap">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
@@ -23,7 +23,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bgCremaPropio">
             <a class="navbar-brand" href="../index.html">
-                <img class="logo" id="top" src="../assets/img/logo-completo.png" alt="Logo de TechnoGlobe">
+                <img class="logo" id="top" src="../assets/img/logo-completo.webp" alt="Logo de TechnoGlobe">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -114,11 +114,11 @@
     <footer class="footer mt-auto py-3">
         <div class="footer-content row container">
             <div class="col-12 col-md-4 col-lg-3">
-                <h5>TechnoGlobe® - 2023</h5>
+                <h4>TechnoGlobe® - 2023</h4>
             </div>
 
             <div class="col-12 col-md-4 col-lg-3">
-                <h6>Acceso rápido</h6>
+                <h4>Acceso rápido</h4>
                 <a href="../index.html">Home</a>
                 <a href="./Noticias.html">Noticias<a>
                         <a href="./Reseñas.html">Reseñas</a>
